# gptcontext

./: .gitignore  PRESETS.md  README.md  bash_alias.txt  build_context.py  config.json  config.py  context_builder.py  context_config.json  exclude_matcher.py  file_scanner.py  generate_presets.py  gitignore_manager.py  message_sample.txt  pyproject.toml  requirements-dev.txt  requirements.txt  summarizer.py
misc/: .gptcontext-config.yml  alias.txt
presets/: PRESETS.md  allcode.yml  android.yml  ansible.yml  audit.yml  backend_only.yml  bashops.yml  cdk_csharp.yml  cdk_java.yml  cdk_py.yml  cdk_ts.yml  clojure.yml  convert_presets.py  cpp.yml  datapipeline.yml  datascience.yml  default.yml  design_docs.yml  docs.yml  dotnet.yml  flutter.yml  frontend_only.yml  github_actions.yml  golang.yml  haskell.yml  hdl.yml  helm.yml  infra_only.yml  java.yml  kong.yml  laravel.yml  latex.yml  minimal.yml  monorepo.yml  phoenix.yml  python.yml  rails.yml  react.yml  reactnative.yml  review_only.yml  (+10 more)
scripts/: generate_presets_md.py
src/gptcontext/: __main__.py  build_context.py  cli.py  config.py  context_builder.py  exclude_matcher.py  file_scanner.py  runner.py  summarizer.py
src/gptcontext/summarizer/: __init__.py  base.py  chatgpt.py  exceptions.py  simple.py
src/gptcontext/util/: list_models.py
tests/: conftest.py  test_build_context_cli.py  test_file_scanner.py  test_gitignore_manager.py  test_summarizer.py
util/: list_models.py
